--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -2,17 +2,20 @@
 
 {% block body%}
 
-<div id="login_wrapper">
-    <h1>Welcome to Catch!</h1>
-    <div class="login_form">
+<div class="glass_container">
+    <div class="login_box">
+        <h2>Login</h2>
         <form action="{{ url_for('login') }}" method="post">
-            <ul>
-                <li><input type="hidden" name="csrf_token" value="{{ csrf_token() }}"></li>
-                <li><input type="text" name="username_entry" placeholder="Username"></li>
-                <li><input type="password" name="password_entry" placeholder="Password"></li>
-                <li><a href="/register" class="register_button">Register</a></li>
-                <li><button type="submit">Login</button></li>
-            </ul>
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+            <input type="text" id="username" name="username" placeholder="Username" required>
+            <input type="password" id="password" name="password" placeholder="Password" required>
+            <div class="options">
+                <input type="checkbox" id="remember" name="remember">
+                <label for="remember">Remember Me</label>
+                <a href="#">Forgot Password?</a>
+            </div>
+            <button type="submit">Login</button>
+            <p>Don't have an account? <a href="/register" id="register">Register</a></p>
         </form>
     </div>
 </div>
